# arrow2ndjson-lite

./: Cargo.toml  README.md
src/: main.rs
